test/valid/fc36956_Bike&Wheels/Wheel.plume
/**
 * Bicycle.plume
 *
 * Test: return type must match
 *
 * @author Carlos Mao de Ferro
 * @version $Id: Wheel.plume 482 2012-06-04 19:07:29Z tcomp000 $
 */
class Wheel extends Object is
	field brand : String
	field axes : Integer
		
	method getBrand : (bikeName : String) -> String is
		brand
	method getNAxes : (bikeName : String) -> Integer is
		axes